# elecard_eye_mac

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt
cmake/: Sanitizers.cmake
docs/superpowers/plans/: 2026-05-27-elecard-eye-mac-mvp.md
docs/superpowers/reference/libs/model/: frame_record-reference.md  poc_calculator-reference.md  stream_session-reference.md
docs/superpowers/reference/libs/parser/: bit_reader-reference.md  ep3_strip-reference.md  h264_pps-reference.md  h264_slice_header-reference.md  h264_sps-reference.md  nal_splitter-reference.md  parameter_set_store-reference.md  syntax_node-reference.md
docs/superpowers/specs/: 2026-05-27-elecard-eye-mac-design.md
libs/decoder/: CMakeLists.txt
libs/io/: CMakeLists.txt
libs/io/tests/: hello_test.cpp
libs/model/: CMakeLists.txt
libs/model/include/model/: frame_record.h  poc_calculator.h  stream_session.h
libs/model/src/: poc_calculator.cpp  stream_session.cpp
libs/model/tests/: poc_calculator_test.cpp  stream_session_test.cpp
libs/parser/: CMakeLists.txt
libs/parser/include/parser/: bit_reader.h  ep3_strip.h  h264_syntax_parser.h  i_syntax_parser.h  nal_splitter.h  nal_unit.h  parameter_set_store.h  syntax_node.h
libs/parser/src/: bit_reader.cpp  ep3_strip.cpp  h264_syntax_parser.cpp  nal_splitter.cpp  parameter_set_store.cpp
libs/parser/tests/: bit_reader_test.cpp  ep3_strip_test.cpp  h264_pps_test.cpp  h264_slice_header_test.cpp  h264_sps_test.cpp  nal_splitter_test.cpp  parameter_set_store_test.cpp
scripts/: setup.sh
tests/: CMakeLists.txt  gen_fixtures.sh
tools/dump_frames/: CMakeLists.txt  main.cpp
